--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Clarence Taylor</span>
+        <span class="d-block d-lg-none">Diego Vallejo-Huanga</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
         </span>
@@ -63,11 +63,11 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Clarence
-            <span class="text-primary">Taylor</span>
+          <h1 class="mb-0">Diego
+            <span class="text-primary">Vallejo-Huanga</span>
           </h1>
-          <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-            <a href="mailto:name@email.com">name@email.com</a>
+          <div class="subheading mb-5"> Rumichaca y Morán Valverde, Quito, Ecuador· (+593) 2396-2300 ext. 2360·
+            <a href="mailto:name@email.com">dvallejoh@ups.edu.ec</a>
           </div>
           <p class="lead mb-5">Researcher in Artificial Intelligence in the Department of Computer Science (IDEIAGEOCA) at the Universidad Politécnica Salesiana (UPS), Ecuador. Lecturer in the Department of Mathematics at the Universidad San francisco de Quito (USFQ) and in the Department of Physics and Mathematics at the Universidad de las Américas (UDLA). I received a B.Sc. degree in Computer Science (2009), M.Sc. degree in Software Engineering, Formal Methods and Information Systems (2010), a Post-Graduate Diploma in Engineering Business Management (2011) and a Ph.D in Computer Science (2016) from UPV. My main research and academic interest encompasses several areas of Artificial Intelligence, machine learning, IRT, inductive programming, cognitive systems, data science and visualisation.</p>
           <div class="social-icons">
