--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <i class="fab fa-github"></i>
             </a>
             <a href="#">
-              <i class="fab fa-google_scholar_logo"></i>
+              <i class="fab fa-googlescholar"></i>
             </a>
             <a href="#">
               <i class="fab fa-researchgate"></i>
@@ -172,6 +172,16 @@
         </div>
       </section>
 
+      <hr class="m-0">	    
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="publications">
+        <div class="my-auto">
+          <h2 class="mb-5">Publications</h2>
+          </h2><ul><li><p><strong>Diego Vallejo-Huanga</strong> , Julio Proaño, Paulina Morillo, Holger Ortega, <a href="http://citt.utb.edu.ec/?page_id=855"><em>“Fault-tolerant model based on fuzzy control for mobile devices”</em></a>, Proceedings of the <a href="http://citt.utb.edu.ec/">4th International Conference on Technology Trends</a> CITT2018, pp 601-615, Communications in Computer and Information Science (CCIS) 895, Springer, August 29-31, 2018.</p>
+          <li><li><p><strong>Diego Vallejo-Huanga</strong> , Paulina Morillo, César Ferri, <a href="https://ac.els-cdn.com/S1877050917307998/1-s2.0-S1877050917307998-main.pdf?_tid=54f824ad-637e-4375-813a-afd92437cd8e&acdnat=1537488360_3018ac93170cad0407ca9ce9bb9716ec"><em>“Semi-Supervised Clustering Algorithms for Grouping Scientific Articles”</em></a>, Proceedings of the <a href="https://www.iccs-meeting.org/iccs2017/index.html"> ICCS 2017,  pp 325-334, Procedia Computer Science 108, Elsevier, Zurich, Switzerland, June 12-14, 2017.</p>
+        </div>
+      </section>		    
+	    
+	    
       <hr class="m-0">
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
