--- a/index.html
+++ b/index.html
@@ -184,9 +184,11 @@
           		  <li><p><strong>Diego Vallejo-Huanga</strong> , Paulina Morillo, Cèsar Ferri, <a href="http://www.aclweb.org/anthology/E17-3011"><em>“ADoCS: Automatic Designer of Conference Schedules”</em></a>, Proceedings of the <a href="http://eacl2017.org/">15th Conference of the European Chapter of the Association for Computational Linguistics EACL2017 </a>,  pp 41-44, Valencia, Spain, April 3-7, 2017.</p>
           	          <li> Lidia Contreras, Cristina Font, Paulina Morillo, <strong>Diego Vallejo-Huanga</strong>, <a href="https://www.ideals.illinois.edu/handle/2142/73782"><em>“TransparencyScience: Return on research investment, where do the funds go?”</em></a>, Proceedings of the <a href="https://ischools.org/the-iconference/about-the-iconference/iconference-2015-summary/">iConference 2015 </a>, University of California Irvine, California, USA, March 24-27, 2015.</p>
 		          </div>
+		     </div>
 		     <h3 class="mb-0">Thesis</h3>
 		          </h2><ul><li><p><strong>Diego Vallejo-Huanga</strong> , Julio Proaño, Paulina Morillo, Holger Ortega, <a href="http://citt.utb.edu.ec/?page_id=855"><em>“Fault-tolerant model based on fuzzy control for mobile devices”</em></a>, Proceedings of the <a href="http://citt.utb.edu.ec/">4th International Conference on Technology Trends CITT2018 </a>, pp 601-615, Communications in Computer and Information Science (CCIS) 895, Springer, August 29-31, 2018.</p>
 		          </div>
+	             </div>
 	             <h3 class="mb-0">Posters</h3>
 		          </h2><ul><li><p><strong>Diego Vallejo-Huanga</strong> , Julio Proaño, Paulina Morillo, Holger Ortega, <a href="http://citt.utb.edu.ec/?page_id=855"><em>“Fault-tolerant model based on fuzzy control for mobile devices”</em></a>, Proceedings of the <a href="http://citt.utb.edu.ec/">4th International Conference on Technology Trends CITT2018 </a>, pp 601-615, Communications in Computer and Information Science (CCIS) 895, Springer, August 29-31, 2018.</p>
 		          </div>
