--- a/index.html
+++ b/index.html
@@ -188,7 +188,9 @@
 		</div>
 	      </div>
 		     <h3 class="mb-0">Thesis</h3>
-		          </h2><ul><li><p><strong>Diego Vallejo-Huanga</strong> , Julio Proaño, Paulina Morillo, Holger Ortega, <a href="http://citt.utb.edu.ec/?page_id=855"><em>“Fault-tolerant model based on fuzzy control for mobile devices”</em></a>, Proceedings of the <a href="http://citt.utb.edu.ec/">4th International Conference on Technology Trends CITT2018 </a>, pp 601-615, Communications in Computer and Information Science (CCIS) 895, Springer, August 29-31, 2018.</p>
+		          </h2><ul><li><p>Diego Vallejo-Huanga, <a href="http://bibdigital.epn.edu.ec/handle/15000/4266"><em>“Estudio y simulación de turbo códigos utilizando el algoritmo MAP y SOVA”</em></a>, Thesis of Engineering in Electronics and Telecommunications</a>, Escuela Politécnica Nacional, Quito, Ecuador, 2011.</p>
+	            	  <li><p><strong>Diego Vallejo-Huanga</strong>, <a href="https://riunet.upv.es/handle/10251/69089"><em>“Clustering de Documentos con Restricciones de Tamaño”</em></a>, Thesis of Master in Information Management</a>, Universitat Politècnica de València, Valencia, Spain, 2016.</p>
+
 		</div>
 	      </div>
 	             <h3 class="mb-0">Posters</h3>
