--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Professor in the Department of Computer Sciences </h3>
               <div class="subheading mb-3">Universidad Politécnica Salesiana</div>
-              <p>Subject Taught: Calculus, Probability and Statistics, Project Management, Differential Equations, Higher mathematics for engineers and High Performance Networks.</p>
+              <p>Subject Taught: Calculus, Probability and Statistics, Project Management, Differential Equations, Higher Mathematics for Engineers and High Performance Networks.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">April 2017 - Present</span>
@@ -127,7 +127,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">3G Technology Advisory</h3>
               <div class="subheading mb-3">Claro - Conecel S.A.</div>
-              <p>Provide support to customers in 3.5G technology. To solve problems in modems, routers, computers and telephones with third generation technology. Technical advice to sales force. Answer inquiries, requests and claims filed by customers through technical solutions and engineering.</p>
+              <p>Responsibilities: Provide support to customers in 3.5G technology. To solve problems in modems, routers, computers and telephones with third generation technology. Technical advice to sales force. Answer inquiries, requests and claims filed by customers through technical solutions and engineering.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">March 2010 - June 2014</span>
@@ -211,6 +211,13 @@
           <h2 class="mb-5">Interests</h2>
           <p>My main research and academic interest encompasses several areas of artificial intelligence, machine learning, information retrieval, computational mathematics, data science and visualization. Outside of the academic field I enjoy traveling, knowing new cultures and photography.</p>
         </div>
+        <div class="my-auto">
+          <h2 class="mb-5">Recent Highlights</h2>
+          <p>Scientific Commitee Member in <a href="http://citt.utb.edu.ec/?page_id=21">International Conference on Technology Trends CITT2018.</a></p>
+          <p>Scientific Commitee Member in <a href="https://www.cedia.edu.ec/es/acerca-del-congreso/organizacion">Internactional Conference TIC.EC 2018. </a></p>
+          <p>Scientific Commitee Member in <a href="http://congreso.fafi.utb.edu.ec/organization.html">International Conference on Technology Trends CITT2017.</a></p>
+          <p>Reviewer in the Ibero-American Journal of Artificial Intelligence <a href="https://journal.iberamia.org/index.php/intartif/index">Inteligencia Artificial</a>, Edited by the Ibero-American Artificial Intelligence Society (IBERAMIA). ISSN 1137-3601 (print), 1988-3064 (on-line). DOI: 10.4114 / a.</p>
+	</div>
       </section>
 
       <hr class="m-0">
