--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                      <h3 class="mb-0">Posters</h3>
           	          <li> Lidia Contreras, Cristina Font, Paulina Morillo, <strong>Diego Vallejo-Huanga</strong>, <a href="http://eprints.rclis.org/25334/"><em>“Transparency Science: Retorno de la inversión en investigación, ¿dónde van en realidad los fondos?”</em></a>, Proceedings of the <a href="http://www.fesabid.org/gijon2015/www.fesabid.org/gijon2015/index.html">FESABID 2015 </a>, Gijon, Spain, May 28-30, 2015.</p>
 		          
-		
+		</div>
 	      </div>
 		     <h3 class="mb-0">Datasets</h3>
 		          </h2><ul><li><p><strong>Diego Vallejo-Huanga</strong> , Paulina Morillo, Cèsar Ferri, <a href="http://dx.doi.org/10.17632/wj5vb6h9jy.1"><em>“ICMLA 2014 Accepted Papers Data Set”</em></a>, DOI: http://dx.doi.org/10.17632/wj5vb6h9jy.1, Mendeley Data</a>, Elsevier, 2018.</p>
@@ -213,10 +213,10 @@
         </div>
         <div class="my-auto">
           <h2 class="mb-5">Recent Highlights</h2>
-          <p>Scientific Commitee Member in <a href="http://citt.utb.edu.ec/?page_id=21">International Conference on Technology Trends CITT2018.</a></p>
-          <p>Scientific Commitee Member in <a href="https://www.cedia.edu.ec/es/acerca-del-congreso/organizacion">Internactional Conference TIC.EC 2018. </a></p>
-          <p>Scientific Commitee Member in <a href="http://congreso.fafi.utb.edu.ec/organization.html">International Conference on Technology Trends CITT2017.</a></p>
-          <p>Reviewer in the Ibero-American Journal of Artificial Intelligence <a href="https://journal.iberamia.org/index.php/intartif/index">Inteligencia Artificial</a>, Edited by the Ibero-American Artificial Intelligence Society (IBERAMIA). ISSN 1137-3601 (print), 1988-3064 (on-line). DOI: 10.4114 / a.</p>
+          <p><li>Scientific Commitee Member in <a href="http://citt.utb.edu.ec/?page_id=21">International Conference on Technology Trends CITT2018.</a></p>
+          <p><li>Scientific Commitee Member in <a href="https://www.cedia.edu.ec/es/acerca-del-congreso/organizacion">Internactional Conference TIC.EC 2018. </a></p>
+          <p><li>Scientific Commitee Member in <a href="http://congreso.fafi.utb.edu.ec/organization.html">International Conference on Technology Trends CITT2017.</a></p>
+          <p><li>Reviewer in the Ibero-American Journal of Artificial Intelligence <a href="https://journal.iberamia.org/index.php/intartif/index">Inteligencia Artificial</a>, Edited by the Ibero-American Artificial Intelligence Society (IBERAMIA). ISSN 1137-3601 (print), 1988-3064 (on-line). DOI: 10.4114 / a.</p>
 	</div>
       </section>
 
