--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 	      </div>
 		     <h3 class="mb-0">Datasets</h3>
 		          </h2><ul><li><p><strong>Diego Vallejo-Huanga</strong> , Paulina Morillo, Cèsar Ferri, <a href="http://dx.doi.org/10.17632/wj5vb6h9jy.1"><em>“ICMLA 2014 Accepted Papers Data Set”</em></a>, DOI: http://dx.doi.org/10.17632/wj5vb6h9jy.1, Mendeley Data</a>, Elsevier, 2018.</p>
-			  <li><p><strong>Diego Vallejo-Huanga</strong> , Paulina Morillo, Cèsar Ferri, <a href="http://archive.ics.uci.edu/ml/datasets/ICMLA+2014+Accepted+Papers+Data+Set"><em>“ICMLA 2014 Accepted Papers Data Set”</em></a>, UCI Machine Learning Repository</a>, University of California - Irvine, 2018.</p>
+			  <li><p><strong>Diego Vallejo-Huanga</strong> , Paulina Morillo, Cèsar Ferri, <a href="http://archive.ics.uci.edu/ml/datasets/ICMLA+2014+Accepted+Papers+Data+Set"><em>UCI Machine Learning Repository</em></a>, University of California - Irvine, 2018.</p>
                 </div>
               </div>
 	</div>
@@ -232,15 +232,8 @@
               Senescyt Scholarship “Convocatoria Abierta 2014 – Segunda Fase”: Scholarship for Master's Program, Region: Europe, Asia and Africa. Ministry of Higher Education, Science, Technology and Innovation - Government of Ecuador. </li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
               1<sup>st</sup>
               Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
           </ul>
         </div>
       </section>
