--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <p class="lead mb-5">Researcher in Artificial Intelligence in the Department of Computer Science (IDEIAGEOCA) at the Universidad Politécnica Salesiana (UPS), Ecuador. Lecturer in the Department of Mathematics at the Universidad San francisco de Quito (USFQ) and in the Department of Physics and Mathematics at the Universidad de las Américas (UDLA).</p>
           <div class="social-icons">
             <a href="#">
-              <i class="fab fa-github"></i>
+              <i class="fab fa-github" href="https://www.netresec.com/index.ashx?page=PcapFiles"></i>
             </a>
             <a href="#">
               <i class="fab fa-google"></i>
