--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           	          <li> Lidia Contreras, Cristina Font, Paulina Morillo, <strong>Diego Vallejo-Huanga</strong>, <a href="https://www.ideals.illinois.edu/handle/2142/73782"><em>“TransparencyScience: Return on research investment, where do the funds go?”</em></a>, Proceedings of the <a href="https://ischools.org/the-iconference/about-the-iconference/iconference-2015-summary/">iConference 2015 </a>, University of California Irvine, California, USA, March 24-27, 2015.</p>
           	          <li><p><strong>Diego Vallejo-Huanga</strong>, Robin Álvarez, <a href="http://bibdigital.epn.edu.ec/handle/15000/4905"><em>“Estudio y simulación de turbo códigos utilizando el algoritmo MAP y SOVA”</em></a>, Proceedings of the XXIV Conference of Electrical and Electronic Engineering – FIEE</a>, Escuela Politécnica Nacional, Quito, Ecuador, March 24-27, 2015.</p>
 		          
-		</div>
+		
 	      </div>
 		     <h3 class="mb-0">Thesis</h3>
 		          </h2><ul><li><p>Diego Vallejo-Huanga, <a href="https://riunet.upv.es/handle/10251/69089"><em>“Clustering de Documentos con Restricciones de Tamaño”</em></a>, Thesis of Master in Information Management</a>, Higher Technical School of Computer Engineering – ETSINF, Universitat Politècnica de València, Valencia, Spain, 2016.</p>
@@ -214,10 +214,10 @@
         </div>
         <div class="my-auto">
           <h2 class="mb-5">Recent Highlights</h2>
-          <p><ul><li>Scientific Commitee Member in <a href="http://citt.utb.edu.ec/?page_id=21">International Conference on Technology Trends CITT2018.</a></p>
-          <p><ul><li>Scientific Commitee Member in <a href="https://www.cedia.edu.ec/es/acerca-del-congreso/organizacion">Internactional Conference TIC.EC 2018. </a></p>
-          <p><ul><li>Scientific Commitee Member in <a href="http://congreso.fafi.utb.edu.ec/organization.html">International Conference on Technology Trends CITT2017.</a></p>
-          <p><ul><li>Reviewer in the Ibero-American Journal of Artificial Intelligence <a href="https://journal.iberamia.org/index.php/intartif/index">Inteligencia Artificial</a>, Edited by the Ibero-American Artificial Intelligence Society (IBERAMIA). ISSN 1137-3601 (print), 1988-3064 (on-line). DOI: 10.4114 / a.</p>
+          <p><li>Scientific Commitee Member in <a href="http://citt.utb.edu.ec/?page_id=21">International Conference on Technology Trends CITT2018.</a></p>
+          <p><li>Scientific Commitee Member in <a href="https://www.cedia.edu.ec/es/acerca-del-congreso/organizacion">Internactional Conference TIC.EC 2018. </a></p>
+          <p><li>Scientific Commitee Member in <a href="http://congreso.fafi.utb.edu.ec/organization.html">International Conference on Technology Trends CITT2017.</a></p>
+          <p><li>Reviewer in the Ibero-American Journal of Artificial Intelligence <a href="https://journal.iberamia.org/index.php/intartif/index">Inteligencia Artificial</a>, Edited by the Ibero-American Artificial Intelligence Society (IBERAMIA). ISSN 1137-3601 (print), 1988-3064 (on-line). DOI: 10.4114 / a.</p>
 	</div>
       </section>
 
