--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
           </div>
           <p class="lead mb-5">Researcher in Artificial Intelligence in the Department of Computer Science (IDEIAGEOCA) at the Universidad Politécnica Salesiana (UPS), Ecuador. Lecturer in the Department of Mathematics at the Universidad San francisco de Quito (USFQ) and in the Department of Physics and Mathematics at the Universidad de las Américas (UDLA).</p>
           <div class="social-icons">
-            <a href="#">
-              <i class="fab fa-github" href="https://www.netresec.com/index.ashx?page=PcapFiles"></i>
+            <a href="https://github.com/dievalhu">
+              <i class="fab fa-github"></i>
             </a>
-            <a href="#">
+            <a href="https://scholar.google.com/citations?user=9xj-v8gAAAAJ&hl=es">
               <i class="fab fa-google"></i>
             </a>
-            <a href="#">
+            <a href="https://www.researchgate.net/profile/Diego_Vallejo3">
               <i class="fab fa-researchgate"></i>
             </a>
           </div>
@@ -182,21 +182,21 @@
           	          <li> Lidia Contreras, Cristina Font, Paulina Morillo, <strong>Diego Vallejo-Huanga</strong>, <a href="https://www.ideals.illinois.edu/handle/2142/73782"><em>“TransparencyScience: Return on research investment, where do the funds go?”</em></a>, Proceedings of the <a href="https://ischools.org/the-iconference/about-the-iconference/iconference-2015-summary/">iConference 2015 </a>, University of California Irvine, California, USA, March 24-27, 2015.</p>
           	          <li><p><strong>Diego Vallejo-Huanga</strong>, Robin Álvarez, <a href="http://bibdigital.epn.edu.ec/handle/15000/4905"><em>“Estudio y simulación de turbo códigos utilizando el algoritmo MAP y SOVA”</em></a>, Proceedings of the XXIV Conference of Electrical and Electronic Engineering – FIEE</a>, Escuela Politécnica Nacional, Quito, Ecuador, March 24-27, 2015.</p>
 		          
-		</div>
+		 </div>
 	      </div>
 		     <h3 class="mb-0">Thesis</h3>
 		          </h2><ul><li><p>Diego Vallejo-Huanga, <a href="https://riunet.upv.es/handle/10251/69089"><em>“Clustering de Documentos con Restricciones de Tamaño”</em></a>, Thesis of Master in Information Management</a>, Higher Technical School of Computer Engineering – ETSINF, Universitat Politècnica de València, Valencia, Spain, 2016.</p>
 			  <li><p>Diego Vallejo-Huanga, <a href="http://bibdigital.epn.edu.ec/handle/15000/4266"><em>“Estudio y simulación de turbo códigos utilizando el algoritmo MAP y SOVA”</em></a>, Thesis of Engineering in Electronics and Telecommunications</a>, Faculty of Electrical and Electronic Engineering – FIEE, Escuela Politécnica Nacional, Quito, Ecuador, 2011.</p>
 		
-	        </div>
+	         </div>
 	      </div>
                      <h3 class="mb-0">Posters</h3>
           	          </h2><li><p>Lidia Contreras, Cristina Font, Paulina Morillo, <strong>Diego Vallejo-Huanga</strong>, <a href="http://eprints.rclis.org/25334/"><em>“Transparency Science: Retorno de la inversión en investigación, ¿dónde van en realidad los fondos?”</em></a>, Proceedings of the <a href="http://www.fesabid.org/gijon2015/www.fesabid.org/gijon2015/index.html">FESABID 2015 </a>, Gijon, Spain, May 28-30, 2015.</p>
 		          
-		</div>
+		 </div>
 	      </div>
 		     <h3 class="mb-0">Datasets</h3>
-		          </h2><ul><li><p><strong>Diego Vallejo-Huanga</strong> , Paulina Morillo, Cèsar Ferri, <a href="http://dx.doi.org/10.17632/wj5vb6h9jy.1"><em>“ICMLA 2014 Accepted Papers Data Set”</em></a>, DOI: http://dx.doi.org/10.17632/wj5vb6h9jy.1, Mendeley Data</a>, Elsevier, 2018.</p>
+		          </h2><li><p><strong>Diego Vallejo-Huanga</strong> , Paulina Morillo, Cèsar Ferri, <a href="http://dx.doi.org/10.17632/wj5vb6h9jy.1"><em>“ICMLA 2014 Accepted Papers Data Set”</em></a>, DOI: http://dx.doi.org/10.17632/wj5vb6h9jy.1, Mendeley Data</a>, Elsevier, 2018.</p>
 			  <li><p><strong>Diego Vallejo-Huanga</strong> , Paulina Morillo, Cèsar Ferri, <a href="http://archive.ics.uci.edu/ml/datasets/ICMLA+2014+Accepted+Papers+Data+Set"><em>UCI Machine Learning Repository</em></a>, University of California - Irvine, 2018.</p>
                 </div>
               </div>
