--- a/index.html
+++ b/index.html
@@ -189,15 +189,16 @@
 			  <li><p>Diego Vallejo-Huanga, <a href="http://bibdigital.epn.edu.ec/handle/15000/4266"><em>“Estudio y simulación de turbo códigos utilizando el algoritmo MAP y SOVA”</em></a>, Thesis of Engineering in Electronics and Telecommunications</a>, Faculty of Electrical and Electronic Engineering – FIEE, Escuela Politécnica Nacional, Quito, Ecuador, 2011.</p>
 		 </div>
 	      </div>
-	             </div><h3 class="mb-0">Posters</h3>
+	             <<h3 class="mb-0">Posters</h3>
           	          </h2><ul><li><p>Lidia Contreras, Cristina Font, Paulina Morillo, <strong>Diego Vallejo-Huanga</strong>, <a href="http://eprints.rclis.org/25334/"><em>“Transparency Science: Retorno de la inversión en investigación, ¿dónde van en realidad los fondos?”</em></a>, Proceedings of the <a href="http://www.fesabid.org/gijon2015/www.fesabid.org/gijon2015/index.html">FESABID 2015 </a>, Gijon, Spain, May 28-30, 2015.</p>
 		          
-		 </div>
-	      </div>
+		 
+	      
 		     <h3 class="mb-0">Datasets</h3>
 		          </h2><li><p><strong>Diego Vallejo-Huanga</strong> , Paulina Morillo, Cèsar Ferri, <a href="http://dx.doi.org/10.17632/wj5vb6h9jy.1"><em>“ICMLA 2014 Accepted Papers Data Set”</em></a>, DOI: http://dx.doi.org/10.17632/wj5vb6h9jy.1, Mendeley Data</a>, Elsevier, 2018.</p>
 			  <li><p><strong>Diego Vallejo-Huanga</strong> , Paulina Morillo, Cèsar Ferri, <a href="http://archive.ics.uci.edu/ml/datasets/ICMLA+2014+Accepted+Papers+Data+Set"><em>UCI Machine Learning Repository</em></a>, University of California - Irvine, 2018.</p>
-                </div>
+                     </div>
+                 </div>
               </div>
 	</div>
       </section>		    
