--- a/index.html
+++ b/index.html
@@ -189,6 +189,24 @@
 			  <li><p>Diego Vallejo-Huanga, <a href="http://bibdigital.epn.edu.ec/handle/15000/4266"><em>“Estudio y simulación de turbo códigos utilizando el algoritmo MAP y SOVA”</em></a>, Thesis of Engineering in Electronics and Telecommunications</a>, Faculty of Electrical and Electronic Engineering – FIEE, Escuela Politécnica Nacional, Quito, Ecuador, 2011.</p>
 		 </div>
 	      </div>
+
+	             <h3 class="mb-0">Articles</h3>
+		          </h2><ul><li><p><strong>Diego Vallejo-Huanga</strong> , Julio Proaño, Paulina Morillo, Holger Ortega, <a href="http://citt.utb.edu.ec/?page_id=855"><em>“Fault-tolerant model based on fuzzy control for mobile devices”</em></a>, Proceedings of the <a href="http://citt.utb.edu.ec/">4th International Conference on Technology Trends CITT2018 </a>, pp 601-615, Communications in Computer and Information Science (CCIS) 895, Springer, August 29-31, 2018.</p>
+          		  <li><p><strong>Diego Vallejo-Huanga</strong> , Paulina Morillo, Cèsar Ferri, <a href="https://ac.els-cdn.com/S1877050917307998/1-s2.0-S1877050917307998-main.pdf?_tid=54f824ad-637e-4375-813a-afd92437cd8e&acdnat=1537488360_3018ac93170cad0407ca9ce9bb9716ec"><em>“Semi-Supervised Clustering Algorithms for Grouping Scientific Articles”</em></a>, Proceedings of the <a href="https://www.iccs-meeting.org/iccs2017/index.html">International Conference on Computational Science ICCS 2017 </a>,  pp 325-334, Procedia Computer Science 108, Elsevier, Zurich, Switzerland, June 12-14, 2017.</p>
+          		  <li><p><strong>Diego Vallejo-Huanga</strong> , Paulina Morillo, Cèsar Ferri, <a href="http://www.aclweb.org/anthology/E17-3011"><em>“ADoCS: Automatic Designer of Conference Schedules”</em></a>, Proceedings of the <a href="http://eacl2017.org/">15th Conference of the European Chapter of the Association for Computational Linguistics EACL2017 </a>,  pp 41-44, Valencia, Spain, April 3-7, 2017.</p>
+          	          <li> Lidia Contreras, Cristina Font, Paulina Morillo, <strong>Diego Vallejo-Huanga</strong>, <a href="https://www.ideals.illinois.edu/handle/2142/73782"><em>“TransparencyScience: Return on research investment, where do the funds go?”</em></a>, Proceedings of the <a href="https://ischools.org/the-iconference/about-the-iconference/iconference-2015-summary/">iConference 2015 </a>, University of California Irvine, California, USA, March 24-27, 2015.</p>
+          	          <li><p><strong>Diego Vallejo-Huanga</strong>, Robin Álvarez, <a href="http://bibdigital.epn.edu.ec/handle/15000/4905"><em>“Estudio y simulación de turbo códigos utilizando el algoritmo MAP y SOVA”</em></a>, Proceedings of the XXIV Conference of Electrical and Electronic Engineering – FIEE</a>, Escuela Politécnica Nacional, Quito, Ecuador, March 24-27, 2015.</p>
+		          
+		 </div>
+	      </div>
+		     <h3 class="mb-0">Thesis</h3>
+		          </h2><ul><li><p>Diego Vallejo-Huanga, <a href="https://riunet.upv.es/handle/10251/69089"><em>“Clustering de Documentos con Restricciones de Tamaño”</em></a>, Thesis of Master in Information Management</a>, Higher Technical School of Computer Engineering – ETSINF, Universitat Politècnica de València, Valencia, Spain, 2016.</p>
+			  <li><p>Diego Vallejo-Huanga, <a href="http://bibdigital.epn.edu.ec/handle/15000/4266"><em>“Estudio y simulación de turbo códigos utilizando el algoritmo MAP y SOVA”</em></a>, Thesis of Engineering in Electronics and Telecommunications</a>, Faculty of Electrical and Electronic Engineering – FIEE, Escuela Politécnica Nacional, Quito, Ecuador, 2011.</p>
+		 </div>
+	      </div>
+
+
+
 	             <h3 class="mb-0">Posters</h3>
           	          </h2><ul><li><p>Lidia Contreras, Cristina Font, Paulina Morillo, <strong>Diego Vallejo-Huanga</strong>, <a href="http://eprints.rclis.org/25334/"><em>“Transparency Science: Retorno de la inversión en investigación, ¿dónde van en realidad los fondos?”</em></a>, Proceedings of the <a href="http://www.fesabid.org/gijon2015/www.fesabid.org/gijon2015/index.html">FESABID 2015 </a>, Gijon, Spain, May 28-30, 2015.</p>
 		  </div>
