--- a/index.html
+++ b/index.html
@@ -190,16 +190,8 @@
 		 </div>
 	      </div>
 
-	             
-		 </div>
-	      </div>
-		 </div>
-	      </div>
-
-
-
-	             <h3 class="mb-0">Posters</h3>
-          	          </h2><ul><li><p>Lidia Contreras, Cristina Font, Paulina Morillo, <strong>Diego Vallejo-Huanga</strong>, <a href="http://eprints.rclis.org/25334/"><em>“Transparency Science: Retorno de la inversión en investigación, ¿dónde van en realidad los fondos?”</em></a>, Proceedings of the <a href="http://www.fesabid.org/gijon2015/www.fesabid.org/gijon2015/index.html">FESABID 2015 </a>, Gijon, Spain, May 28-30, 2015.</p>
+	             	             <h3 class="mb-0">Posteres</h3>
+          	                     </h2><ul><li><p>Lidia Contreras, Cristina Font, Paulina Morillo, <strong>Diego Vallejo-Huanga</strong>, <a href="http://eprints.rclis.org/25334/"><em>“Transparency Science: Retorno de la inversión en investigación, ¿dónde van en realidad los fondos?”</em></a>, Proceedings of the <a href="http://www.fesabid.org/gijon2015/www.fesabid.org/gijon2015/index.html">FESABID 2015 </a>, Gijon, Spain, May 28-30, 2015.</p>
 		  </div>
 	      </div>        
 		 
