--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
         </div>
         <div class="my-auto">
           <h2 class="mb-5">Recent Highlights</h2>
-          <p><li>Scientific Commitee Member in <a href="http://citt.utb.edu.ec/?page_id=21">International Conference on Technology Trends CITT2018.</a></p>
-          <p><li>Scientific Commitee Member in <a href="https://www.cedia.edu.ec/es/acerca-del-congreso/organizacion">Internactional Conference TIC.EC 2018. </a></p>
-          <p><li>Scientific Commitee Member in <a href="http://congreso.fafi.utb.edu.ec/organization.html">International Conference on Technology Trends CITT2017.</a></p>
+          <p><ul><li>Scientific Commitee Member in <a href="http://citt.utb.edu.ec/?page_id=21">International Conference on Technology Trends CITT2018.</a></p>
+          <p><ul><li>Scientific Commitee Member in <a href="https://www.cedia.edu.ec/es/acerca-del-congreso/organizacion">Internactional Conference TIC.EC 2018. </a></p>
+          <p><ul><li>Scientific Commitee Member in <a href="http://congreso.fafi.utb.edu.ec/organization.html">International Conference on Technology Trends CITT2017.</a></p>
           <p><ul><li>Reviewer in the Ibero-American Journal of Artificial Intelligence <a href="https://journal.iberamia.org/index.php/intartif/index">Inteligencia Artificial</a>, Edited by the Ibero-American Artificial Intelligence Society (IBERAMIA). ISSN 1137-3601 (print), 1988-3064 (on-line). DOI: 10.4114 / a.</p>
 	</div>
       </section>
@@ -240,17 +240,17 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Best Academic Record 2016 – Master's Degree in Information Management – Universitat Politècnica de València. </li>
+              Best Academic Record 2016 – Master's Degree in Information Management – Universitat Politècnica de València.</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Finalist Project in the "iConference 2015 - Social Media Expo" - University of California Irvine </li>		  		  
+              Finalist Project in the "iConference 2015 - Social Media Expo" - University of California Irvine.</li>		  		  
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Senescyt Scholarship “Convocatoria Abierta 2014 – Segunda Fase”: Scholarship for Master's Program, Region: Europe, Asia and Africa. Ministry of Higher Education, Science, Technology and Innovation - Government of Ecuador. </li>
+              Senescyt Scholarship “Convocatoria Abierta 2014 – Segunda Fase” – Scholarship for Master's Program, Region: Europe, Asia and Africa. Ministry of Higher Education, Science, Technology and Innovation - Government of Ecuador. </li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               3<sup>rd</sup>
-              Place - XX National Intercollegiate Physics Contest "Albert Einstein" - Practical Modality</li>
+              Place – XX National Intercollegiate Physics Contest "Albert Einstein" – Practical Modality.</li>
           </ul>
         </div>
       </section>
