--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
           <p><ul><li>Scientific Commitee Member in <a href="http://citt.utb.edu.ec/?page_id=21">International Conference on Technology Trends CITT2018.</a></p>
           <p><li>Scientific Commitee Member in <a href="https://www.cedia.edu.ec/es/acerca-del-congreso/organizacion">Internactional Conference TIC.EC 2018. </a></p>
           <p><li>Scientific Commitee Member in <a href="http://congreso.fafi.utb.edu.ec/organization.html">International Conference on Technology Trends CITT2017.</a></p>
-          <p><<li>Reviewer in the Ibero-American Journal of Artificial Intelligence <a href="https://journal.iberamia.org/index.php/intartif/index">Inteligencia Artificial</a>, Edited by the Ibero-American Artificial Intelligence Society (IBERAMIA). ISSN 1137-3601 (print), 1988-3064 (on-line). DOI: 10.4114 / a.</p>
+          <p><li>Reviewer in the Ibero-American Journal of Artificial Intelligence <a href="https://journal.iberamia.org/index.php/intartif/index">Inteligencia Artificial</a>, Edited by the Ibero-American Artificial Intelligence Society (IBERAMIA). ISSN 1137-3601 (print), 1988-3064 (on-line). DOI: 10.4114 / a.</p>
 	</div>
       </section>
 
