--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Professor in the Department of Computer Sciences </h3>
               <div class="subheading mb-3">Universidad Politécnica Salesiana</div>
-              <p>Subject Taught: Calculus, Probability and Statistics, Project Management, Differential Equations, Higher Mathematics for Engineers and High Performance Networks.</p>
+              <p>Subject Taught: Calculus, Probability and Statistics, Project Management, Differential Equations, Higher Mathematics for Engineers, High Performance Networks and Computational Statistics.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">April 2017 - Present</span>
@@ -179,8 +179,9 @@
 	     <div class="resume-item d-flex flex-column flex-md-row mb-5">
                  <div class="resume-content mr-auto">
                      <h3 class="mb-0">Articles</h3>
-		          </h2><ul><li><p><strong>Diego Vallejo-Huanga</strong> , Julio Proaño, Paulina Morillo, Holger Ortega, <a href="http://citt.utb.edu.ec/?page_id=855"><em>“Fault-tolerant model based on fuzzy control for mobile devices”</em></a>, Proceedings of the <a href="http://citt.utb.edu.ec/">4th International Conference on Technology Trends CITT2018 </a>, pp 601-615, Communications in Computer and Information Science (CCIS) 895, Springer, August 29-31, 2018.</p>
-          		  <li><p><strong>Diego Vallejo-Huanga</strong> , Paulina Morillo, Cèsar Ferri, <a href="https://ac.els-cdn.com/S1877050917307998/1-s2.0-S1877050917307998-main.pdf?_tid=54f824ad-637e-4375-813a-afd92437cd8e&acdnat=1537488360_3018ac93170cad0407ca9ce9bb9716ec"><em>“Semi-Supervised Clustering Algorithms for Grouping Scientific Articles”</em></a>, Proceedings of the <a href="https://www.iccs-meeting.org/iccs2017/index.html">International Conference on Computational Science ICCS 2017 </a>,  pp 325-334, Procedia Computer Science 108, Elsevier, Zurich, Switzerland, June 12-14, 2017.</p>
+		          </h2><ul><li><li> Xavier López, Santiago Lechón, Stalin Mora, <strong>Diego Vallejo-Huanga</strong>, <a href="http://www.stsiva2019.org/index.html"><em>“MARRSIDS: Monitoring Assistant to Reduce the Risk of Sudden Infant Death Syndrome”</em></a>, Proceedings of the <a href="http://www.stsiva2019.org/index.html"> XXII Symposium on Image, Signal Processing and Artificial Vision STSIVA 2019 </a>, IEEE Xplore Digital Library, Bucaramanga, Colombia, April 24-26, 2019.</p>
+          		  <li><p><strong>Diego Vallejo-Huanga</strong> , Julio Proaño, Paulina Morillo, Holger Ortega, <a href="https://link.springer.com/chapter/10.1007/978-3-030-05532-5_36"><em>“Fault-tolerant model based on fuzzy control for mobile devices”</em></a>, Proceedings of the <a href="https://link.springer.com/book/10.1007/978-3-030-05532-5">4th International Conference on Technology Trends CITT2018 </a>, pp 488-499, Communications in Computer and Information Science (CCIS) 895, Springer, August 29-31, 2018.</p>
+		          <li><p><strong>Diego Vallejo-Huanga</strong> , Paulina Morillo, Cèsar Ferri, <a href="https://ac.els-cdn.com/S1877050917307998/1-s2.0-S1877050917307998-main.pdf?_tid=54f824ad-637e-4375-813a-afd92437cd8e&acdnat=1537488360_3018ac93170cad0407ca9ce9bb9716ec"><em>“Semi-Supervised Clustering Algorithms for Grouping Scientific Articles”</em></a>, Proceedings of the <a href="https://www.iccs-meeting.org/iccs2017/index.html">International Conference on Computational Science ICCS 2017 </a>,  pp 325-334, Procedia Computer Science 108, Elsevier, Zurich, Switzerland, June 12-14, 2017.</p>
           		  <li><p><strong>Diego Vallejo-Huanga</strong> , Paulina Morillo, Cèsar Ferri, <a href="http://www.aclweb.org/anthology/E17-3011"><em>“ADoCS: Automatic Designer of Conference Schedules”</em></a>, Proceedings of the <a href="http://eacl2017.org/">15th Conference of the European Chapter of the Association for Computational Linguistics EACL2017 </a>,  pp 41-44, Valencia, Spain, April 3-7, 2017.</p>
           	          <li> Lidia Contreras, Cristina Font, Paulina Morillo, <strong>Diego Vallejo-Huanga</strong>, <a href="https://www.ideals.illinois.edu/handle/2142/73782"><em>“TransparencyScience: Return on research investment, where do the funds go?”</em></a>, Proceedings of the <a href="https://ischools.org/the-iconference/about-the-iconference/iconference-2015-summary/">iConference 2015 </a>, University of California Irvine, California, USA, March 24-27, 2015.</p>
           	          <li><p><strong>Diego Vallejo-Huanga</strong>, Robin Álvarez, <a href="http://bibdigital.epn.edu.ec/handle/15000/4905"><em>“Estudio y simulación de turbo códigos utilizando el algoritmo MAP y SOVA”</em></a>, Proceedings of the XXIV Conference of Electrical and Electronic Engineering – FIEE</a>, Escuela Politécnica Nacional, Quito, Ecuador, August 15-17, 2012.</p>
@@ -225,9 +226,9 @@
         </div>
         <div class="my-auto">
           <h2 class="mb-5">Recent Highlights</h2>
-          <p><ul><li>Scientific Commitee Member in <a href="http://citt.utb.edu.ec/?page_id=21">International Conference on Technology Trends CITT2018.</a></p>
+          <p><ul><li>Scientific Commitee Member in <a href="">International Conference on Technology Trends CITT2018.</a></p>
           <p><li>Scientific Commitee Member in <a href="https://www.cedia.edu.ec/es/acerca-del-congreso/organizacion">Internactional Conference TIC.EC 2018. </a></p>
-          <p><li>Scientific Commitee Member in <a href="http://congreso.fafi.utb.edu.ec/organization.html">International Conference on Technology Trends CITT2017.</a></p>
+          <p><li>Scientific Commitee Member in <a href="https://link.springer.com/content/pdf/bfm%3A978-3-319-72727-1%2F1.pdf">International Conference on Technology Trends CITT2017.</a></p>
           <p><li>Reviewer in the Ibero-American Journal of Artificial Intelligence <a href="https://journal.iberamia.org/index.php/intartif/index">Inteligencia Artificial</a>, Edited by the Ibero-American Artificial Intelligence Society (IBERAMIA). ISSN 1137-3601 (print), 1988-3064 (on-line). DOI: 10.4114 / a.</p>
 	</div>
       </section>
