--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
           </h1>
           <div class="subheading mb-5"> Rumichaca y Morán Valverde - Quito - Ecuador· (+593) 2396-2300 ext. 2360·
             <a href="mailto:dvallejoh@ups.edu.ec">dvallejoh@ups.edu.ec</a>
-          <div class="subheading mb-5"> ORCID: <a href="https://orcid.org/0000-0002-2704-3858"><em>0000-0002-2704-3858</em></a>
+          <div class="subheading mb-5"> ORCID: <a href="https://orcid.org/0000-0002-2704-3858">0000-0002-2704-3858</a>
+          <div class="subheading mb-5"> SCOPUS ID: <a href="https://www.scopus.com/authid/detail.uri?origin=resultslist&authorId=57195344702&zone=">57195344702</a>
           </div>
           <p class="lead mb-5">Researcher in Artificial Intelligence in the Department of Computer Science (IDEIAGEOCA) at the Universidad Politécnica Salesiana (UPS), Ecuador. Lecturer in the Department of Mathematics at the Universidad San francisco de Quito (USFQ) and in the Department of Physics and Mathematics at the Universidad de las Américas (UDLA).</p>
           <div class="social-icons">
@@ -90,7 +91,18 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
           <h2 class="mb-5">Experience</h2>
-
+		
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Professor in the Master Program in Production and Industrial Operations</h3>
+              <div class="subheading mb-3">Universidad Politécnica Salesiana</div>
+              <p>Subject Taught: Multivariate Analysis and Experimental Design.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">April 2019 - Present</span>
+            </div>
+          </div>
+		
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Professor in the Department of Computer Sciences </h3>
@@ -183,7 +195,7 @@
 		          </h2><ul><li>Paulina Morillo, Holger Ortega, Julio Proaño, <strong>Diego Vallejo-Huanga</strong>, María Cazares, <a href="http://www.ahfe2019.org/program1.html"><em>“Psycho Web: a Machine Learning Platform for the Diagnosis and Classification of Mental Disorders”</em></a>, Proceedings of the <a href="http://www.ahfe2019.org/board.html#iceep"> 1st International Conference on Industrial Cognitive Ergonomics and Engineering Psychology</a>, Advances in Intelligent Systems and Computing, Springer, Washington D.C., USA, July 24-28, 2019 (In Press).</p>
 		          <li> Paulina Morillo, Diego Chicaiza, <strong>Diego Vallejo-Huanga</strong>, <a href="http://www.ahfe2019.org/program3.html"><em>“System of Recommendation and Automatic Correction of Web Accessibility using Artificial Intelligence”</em></a>, Proceedings of the <a href="http://www.ahfe2019.org/board.html#uue"> 10th International Conference on Applied Human Factors and Ergonomics AHFE 2019</a>, Advances in Intelligent Systems and Computing, Springer, Washington D.C., USA, July 24-28, 2019 (In Press).</p>
 		          <li> Xavier López, Santiago Lechón, Stalin Mora, <strong>Diego Vallejo-Huanga</strong>, <a href="http://www.stsiva2019.org/index.html"><em>“MARRSIDS: Monitoring Assistant to Reduce the Risk of Sudden Infant Death Syndrome”</em></a>, Proceedings of the <a href="http://www.stsiva2019.org/index.html"> XXII Symposium on Image, Signal Processing and Artificial Vision STSIVA 2019</a>, IEEE Xplore Digital Library, Bucaramanga, Colombia, April 24-26, 2019 (In Press).</p>
-          		  <li><p><strong>Diego Vallejo-Huanga</strong>, Paulina Morillo, Cèsar Ferri, <a href="https://www.sciencedirect.com/science/article/pii/S2352340919301878#!"><em>“A dataset of attributes from papers of a machine learning conference”</em></a>, Journal <a href="https://www.journals.elsevier.com/data-in-brief"> Data in Brief</a>,  Elsevier BV - Netherlands. ISSN: 2352-3409, 2019 (In Press).</p>
+          		  <li><p><strong>Diego Vallejo-Huanga</strong>, Paulina Morillo, Cèsar Ferri, <a href="https://www.sciencedirect.com/science/article/pii/S2352340919301878#!"><em>“A dataset of attributes from papers of a machine learning conference”</em></a>, Journal <a href="https://www.journals.elsevier.com/data-in-brief"> Data in Brief</a>,  Elsevier BV - Netherlands. ISSN: 2352-3409, 2019.</p>
                		  <li><p><strong>Diego Vallejo-Huanga</strong>, Julio Proaño, Paulina Morillo, Holger Ortega, <a href="https://link.springer.com/chapter/10.1007/978-3-030-05532-5_36"><em>“Fault-tolerant model based on fuzzy control for mobile devices”</em></a>, Proceedings of the <a href="https://link.springer.com/book/10.1007/978-3-030-05532-5">4th International Conference on Technology Trends CITT2018</a>, pp 488-499, Communications in Computer and Information Science (CCIS) 895, Springer, August 29-31, 2018.</p>
 		          <li><p><strong>Diego Vallejo-Huanga</strong>, Paulina Morillo, Cèsar Ferri, <a href="http://r-es.org/XjuR/pdf/programa-Xjur.pdf"><em>“Agrupamiento con restricciones para configurar sesiones en conferencias científicas con R + Shiny”</em></a>, X Jornadas de Usuarios de R <a href="http://r-es.org/XjuR/"> XjuR</a>,  Murcia, Spain, November 22-23, 2018.</p>
 	      		  <li><p><strong>Diego Vallejo-Huanga</strong>, Paulina Morillo, Cèsar Ferri, <a href="https://ac.els-cdn.com/S1877050917307998/1-s2.0-S1877050917307998-main.pdf?_tid=54f824ad-637e-4375-813a-afd92437cd8e&acdnat=1537488360_3018ac93170cad0407ca9ce9bb9716ec"><em>“Semi-Supervised Clustering Algorithms for Grouping Scientific Articles”</em></a>, Proceedings of the <a href="https://www.iccs-meeting.org/iccs2017/index.html">International Conference on Computational Science ICCS 2017</a>,  pp 325-334, Procedia Computer Science 108, Elsevier, Zurich, Switzerland, June 12-14, 2017.</p>
