--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
           <div class="subheading mb-5"> Rumichaca y Morán Valverde - Quito - Ecuador· (+593) 2396-2300 ext. 2360· <a href="mailto:dvallejoh@ups.edu.ec">dvallejoh@ups.edu.ec</a> 
           <div class="subheading mb-5"> ORCID: <a href="https://orcid.org/0000-0002-2704-3858">0000-0002-2704-3858</a> 
           <div class="subheading mb-5"> SCOPUS ID: <a href="https://www.scopus.com/authid/detail.uri?origin=resultslist&authorId=57195344702&zone=">57195344702</a> 
+          </div>
+	  </div>
+          </div>
           <p class="lead mb-5">Researcher in Artificial Intelligence in the Department of Computer Science (IDEIAGEOCA) at the Universidad Politécnica Salesiana (UPS), Ecuador. Lecturer in the Department of Mathematics at the Universidad San francisco de Quito (USFQ) and in the Department of Physics and Mathematics at the Universidad de las Américas (UDLA).</p>
           <div class="social-icons">
             <a href="https://github.com/dievalhu">
