--- a/index.html
+++ b/index.html
@@ -243,7 +243,8 @@
         </div>
         <div class="my-auto">
           <h2 class="mb-5">Recent Highlights</h2>
-          <p><ul><li>Scientific Commitee Member in <a href="https://link.springer.com/content/pdf/bfm%3A978-3-030-05532-5%2F1.pdf">International Conference on Technology Trends CITT2018.</a></p>
+          <p><ul><li>Scientific Technical Chair in <a href="http://smartechic.org/committees.html">International Conference on Technology Trends CITT2018.</a></p>
+          <p><li>Scientific Commitee Member in <a href="https://link.springer.com/content/pdf/bfm%3A978-3-030-05532-5%2F1.pdf">International Conference on Technology Trends CITT2018.</a></p>
           <p><li>Scientific Commitee Member in <a href="https://link.springer.com/content/pdf/bfm%3A978-3-030-02828-2%2F1.pdf">Internactional Conference TIC.EC 2018. </a></p>
           <p><li>Scientific Commitee Member in <a href="https://link.springer.com/content/pdf/bfm%3A978-3-319-72727-1%2F1.pdf">International Conference on Technology Trends CITT2017.</a></p>
           <p><li>Reviewer in the Ibero-American Journal of Artificial Intelligence <a href="https://journal.iberamia.org/index.php/intartif/index">Inteligencia Artificial</a>, Edited by the Ibero-American Artificial Intelligence Society (IBERAMIA). ISSN 1137-3601 (print), 1988-3064 (on-line). DOI: 10.4114 / a.</p>
