--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
             </a>
             <a href="https://www.researchgate.net/profile/Diego_Vallejo3">
               <i class="fab fa-researchgate"></i>
+            <span id="badgeCont615"><script type="text/javascript" src="https://publons.com/mashlets?el=badgeCont615&rid=O-1902-2019&size=small"></script></span>
             </a>
           </div>
         </div>
