--- a/index.html
+++ b/index.html
@@ -221,15 +221,15 @@
                  <div class="resume-content mr-auto">
 	             <h3 class="mb-0">Posters</h3>
           	          </h2><ul><li><p>Lidia Contreras, Cristina Font, Paulina Morillo, <strong>Diego Vallejo-Huanga</strong>, <a href="http://eprints.rclis.org/25334/"><em>“Transparency Science: Retorno de la inversión en investigación, ¿dónde van en realidad los fondos?”</em></a>, Proceedings of the <a href="http://www.fesabid.org/gijon2015/www.fesabid.org/gijon2015/index.html">FESABID 2015 </a>, Gijon, Spain, May 28-30, 2015.</p>
-		          </h2><ul><li><p>Xavier López, Santiago Lechón, Stalin Moro, <strong>Diego Vallejo-Huanga</strong>, <a href="https://f1000research.com/posters/8-847"><em>“MARRSIDS: Monitoring Assistant to Reduce the Risk of Sudden Infant Death Syndrome”</em></a>, F1000 Research, Bucaramanga, Colombia, April 24-26, 2019.</p>
+		          <li><p>Xavier López, Santiago Lechón, Stalin Moro, <strong>Diego Vallejo-Huanga</strong>, <a href="https://f1000research.com/posters/8-847"><em>“MARRSIDS: Monitoring Assistant to Reduce the Risk of Sudden Infant Death Syndrome”</em></a>, F1000 Research, Bucaramanga, Colombia, April 24-26, 2019.</p>
 		 </div>
 	     </div>        
 		 
              <div class="resume-item d-flex flex-column flex-md-row mb-5">
                  <div class="resume-content mr-auto">
                        <h3 class="mb-0">Datasets</h3>
-		            </h2><ul><li><p><strong>Diego Vallejo-Huanga</strong> , Paulina Morillo, Cèsar Ferri, <a href="https://data.mendeley.com/datasets/wj5vb6h9jy/2"><em>“ICMLA 2014/2015/2016/2017 Accepted Papers Data Set”</em></a>, DOI: http://dx.doi.org/10.17632/wj5vb6h9jy.2, Mendeley Data</a>, Elsevier, 2019.</p>
-			    <li><p><strong>Diego Vallejo-Huanga</strong> , Paulina Morillo, Cèsar Ferri, <a href="http://archive.ics.uci.edu/ml/datasets/ICMLA+2014+Accepted+Papers+Data+Set"><em>UCI Machine Learning Repository</em></a>, University of California - Irvine, 2018.</p>
+		            </h2><ul><li><p><strong>Diego Vallejo-Huanga</strong>, Paulina Morillo, Cèsar Ferri, <a href="https://data.mendeley.com/datasets/wj5vb6h9jy/2"><em>“ICMLA 2014/2015/2016/2017 Accepted Papers Data Set”</em></a>, DOI: http://dx.doi.org/10.17632/wj5vb6h9jy.2, Mendeley Data</a>, Elsevier, 2019.</p>
+			    <li><p><strong>Diego Vallejo-Huanga</strong>, Paulina Morillo, Cèsar Ferri, <a href="http://archive.ics.uci.edu/ml/datasets/ICMLA+2014+Accepted+Papers+Data+Set"><em>UCI Machine Learning Repository</em></a>, University of California - Irvine, 2018.</p>
                  </div>
              </div>
         </div>
