--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
              <div class="resume-item d-flex flex-column flex-md-row mb-5">
                  <div class="resume-content mr-auto">
 	             <h3 class="mb-0">Posters</h3>
-          	          </h2><ul><li><p>Xavier López, Santiago Lechón, Stalin Mora, <strong>Diego Vallejo-Huanga</strong>, <a href="https://f1000research.com/posters/8-847"><em>“MARRSIDS: Monitoring Assistant to Reduce the Risk of Sudden Infant Death Syndrome”</em></a>, DOI: https://doi.org/10.7490/f1000research.1116804.1, F1000 Research, 2019.</p>
+          	          </h2><ul><li><p>Xavier López, Santiago Lechón, Stalin Mora, <strong>Diego Vallejo-Huanga</strong>, <a href="https://doi.org/10.7490/f1000research.1116881.1"><em>“MARRSIDS: Monitoring Assistant to Reduce the Risk of Sudden Infant Death Syndrome”</em></a>, DOI: https://doi.org/10.7490/f1000research.1116881.1, F1000 Research, 2019, 8:847.</p>
 		          <li><p>Lidia Contreras, Cristina Font, Paulina Morillo, <strong>Diego Vallejo-Huanga</strong>, <a href="http://eprints.rclis.org/25334/"><em>“Transparency Science: Retorno de la inversión en investigación, ¿dónde van en realidad los fondos?”</em></a>, Proceedings of the <a href="http://www.fesabid.org/gijon2015/www.fesabid.org/gijon2015/index.html">FESABID 2015 </a>, Gijon, Spain, May 28-30, 2015.</p>
 		 </div>
 	     </div>        
