--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div class="subheading mb-5"> SCOPUS ID: <a href="https://www.scopus.com/authid/detail.uri?origin=resultslist&authorId=57195344702&zone=">57195344702</a> </div> </div>
           </div>
           </div>
-          <p class="lead mb-5">Researcher in Artificial Intelligence in the Department of Computer Science (IDEIAGEOCA) at the Universidad Politécnica Salesiana (UPS), Ecuador. Was lecturer in the Department of Mathematics at the Universidad San francisco de Quito (USFQ) and in the Department of Physics and Mathematics at the Universidad de las Américas (UDLA).</p>
+          <p class="lead mb-5">Researcher in Artificial Intelligence in the Department of Computer Science (IDEIAGEOCA) at the Universidad Politécnica Salesiana (UPS), Ecuador. Was lecturer in the Department of Mathematics at the Universidad San Francisco de Quito (USFQ) and in the Department of Physics and Mathematics at the Universidad de las Américas (UDLA).</p>
           <div class="social-icons">
             <a href="https://github.com/dievalhu">
               <i class="fab fa-github"></i>
