--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Diego Vallejo-Huanga</span>
         <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+          <img class="img-fluid img-profile rounded-circle mx-auto mb-3" src="img/profile.jpg" alt="">
         </span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -66,13 +66,13 @@
           <h1 class="mb-0">Diego
             <span class="text-primary">Vallejo-Huanga</span>
           </h1>
-          <div class="subheading mb-5"> Rumichaca y Morán Valverde - Quito - Ecuador· (+593) 2396-2300 ext. 2360· <a href="mailto:dvallejoh@ups.edu.ec">dvallejoh@ups.edu.ec</a> 
+          <div class="subheading mb-5"> Rumichaca y Morán Valverde - Quito - Ecuador· (+593) 2396-2300 ext. 2360 · <a href="mailto:dvallejoh@ups.edu.ec">dvallejoh@ups.edu.ec</a> 
           <div class="subheading mb-5"> ORCID: <a href="https://orcid.org/0000-0002-2704-3858">0000-0002-2704-3858</a> 
           <div class="subheading mb-5"> Web of Science Researcher ID: <a href="https://publons.com/researcher/2923553/diego-vallejo-huanga/">O-1902-2019</a>   
           <div class="subheading mb-5"> SCOPUS ID: <a href="https://www.scopus.com/authid/detail.uri?origin=resultslist&authorId=57195344702&zone=">57195344702</a> </div> </div>
           </div>
           </div>
-          <p class="lead mb-5">Researcher in Artificial Intelligence in the Department of Computer Science (IDEIAGEOCA) at the Universidad Politécnica Salesiana (UPS), Ecuador. Was lecturer in the Department of Mathematics at the Universidad San Francisco de Quito (USFQ) and in the Department of Physics and Mathematics at the Universidad de las Américas (UDLA).</p>
+          <p class="lead mb-5">Researcher in Artificial Intelligence in the Department of Computer Science (IDEIAGEOCA Research Group) at the Universidad Politécnica Salesiana (UPS), Ecuador. Lecturer in the Department of Mathematics at the Universidad San Francisco de Quito (USFQ) and in the Department of Physics and Mathematics at the Universidad de las Américas (UDLA).</p>
           <div class="social-icons">
             <a href="https://github.com/dievalhu">
               <i class="fab fa-github"></i>
@@ -110,7 +110,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Professor in the Department of Computer Sciences </h3>
               <div class="subheading mb-3">Universidad Politécnica Salesiana</div>
-              <p>Subject Taught: Calculus, Probability and Statistics, Project Management, Differential Equations, Higher Mathematics for Engineers, High Performance Networks and Computational Statistics.</p>
+              <p>Subject Taught: Calculus, Probability and Statistics, Project Management, Differential Equations, Higher Mathematics for Engineers, High Performance Networks, Computational Statistics and Machine Learning.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">April 2017 - Present</span>
@@ -124,7 +124,7 @@
               <p>Subject Taught: Mathematics for Health Sciences, Inferential Statistics, Integral Calculus and Quantitative Models.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">October 2016 - June 2017</span>
+              <span class="text-primary">October 2016 - Present</span>
             </div>
           </div>		  
 		  		  
@@ -135,7 +135,7 @@
               <p>Subject Taught: Mathematical Logic, Differential Calculus, Integral Calculus, Vector Physical, Math Propaedeutic and Operations Research.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">September 2012 - August 2014 / October 2016 - April 2017</span>
+              <span class="text-primary">September 2012 - August 2014 / October 2016 - Present</span>
             </div>
           </div>		  
 
@@ -201,7 +201,7 @@
           		  <li><p><strong>Diego Vallejo-Huanga</strong>, Paulina Morillo, Cèsar Ferri, <a href="https://www.sciencedirect.com/science/article/pii/S2352340919301878#!"><em>“A dataset of attributes from papers of a machine learning conference”</em></a>, Journal <a href="https://www.journals.elsevier.com/data-in-brief"> Data in Brief</a>,  Elsevier BV - Netherlands. ISSN: 2352-3409, 2019.</p>
                		  <li><p><strong>Diego Vallejo-Huanga</strong>, Julio Proaño, Paulina Morillo, Holger Ortega, <a href="https://link.springer.com/chapter/10.1007/978-3-030-05532-5_36"><em>“Fault-tolerant model based on fuzzy control for mobile devices”</em></a>, Proceedings of the <a href="https://link.springer.com/book/10.1007/978-3-030-05532-5">4th International Conference on Technology Trends CITT2018</a>, pp 488-499, Communications in Computer and Information Science (CCIS) 895, Springer, August 29-31, 2018.</p>
 		          <li><p><strong>Diego Vallejo-Huanga</strong>, Paulina Morillo, Cèsar Ferri, <a href="http://r-es.org/XjuR/pdf/programa-Xjur.pdf"><em>“Agrupamiento con restricciones para configurar sesiones en conferencias científicas con R + Shiny”</em></a>, X Jornadas de Usuarios de R <a href="http://r-es.org/XjuR/"> XjuR</a>,  Murcia, Spain, November 22-23, 2018.</p>
-	      		  <li><p><strong>Diego Vallejo-Huanga</strong>, Paulina Morillo, Cèsar Ferri, <a href="https://ac.els-cdn.com/S1877050917307998/1-s2.0-S1877050917307998-main.pdf?_tid=54f824ad-637e-4375-813a-afd92437cd8e&acdnat=1537488360_3018ac93170cad0407ca9ce9bb9716ec"><em>“Semi-Supervised Clustering Algorithms for Grouping Scientific Articles”</em></a>, Proceedings of the <a href="https://www.iccs-meeting.org/iccs2017/index.html">International Conference on Computational Science ICCS 2017</a>,  pp 325-334, Procedia Computer Science 108, Elsevier, Zurich, Switzerland, June 12-14, 2017.</p>
+	      		  <li><p><strong>Diego Vallejo-Huanga</strong>, Paulina Morillo, Cèsar Ferri, <a href="https://doi.org/10.1016/j.procs.2017.05.206"><em>“Semi-Supervised Clustering Algorithms for Grouping Scientific Articles”</em></a>, Proceedings of the <a href="https://www.iccs-meeting.org/iccs2017/index.html">International Conference on Computational Science ICCS 2017</a>,  pp 325-334, Procedia Computer Science 108, Elsevier, Zurich, Switzerland, June 12-14, 2017.</p>
           		  <li><p><strong>Diego Vallejo-Huanga</strong>, Paulina Morillo, Cèsar Ferri, <a href="http://www.aclweb.org/anthology/E17-3011"><em>“ADoCS: Automatic Designer of Conference Schedules”</em></a>, Proceedings of the <a href="http://eacl2017.org/">15th Conference of the European Chapter of the Association for Computational Linguistics EACL2017</a>,  pp 41-44, Valencia, Spain, April 3-7, 2017.</p>
           	          <li> Lidia Contreras, Cristina Font, Paulina Morillo, <strong>Diego Vallejo-Huanga</strong>, <a href="https://www.ideals.illinois.edu/handle/2142/73782"><em>“TransparencyScience: Return on research investment, where do the funds go?”</em></a>, Proceedings of the <a href="https://ischools.org/the-iconference/about-the-iconference/iconference-2015-summary/">iConference 2015</a>, University of California Irvine, California, USA, March 24-27, 2015.</p>
           	          <li><p><strong>Diego Vallejo-Huanga</strong>, Robin Álvarez, <a href="http://bibdigital.epn.edu.ec/handle/15000/4905"><em>“Estudio y simulación de turbo códigos utilizando el algoritmo MAP y SOVA”</em></a>, Proceedings of the XXIV Conference of Electrical and Electronic Engineering – FIEE</a>, Escuela Politécnica Nacional, Quito, Ecuador, August 15-17, 2012.</p>
